<resources>
    <string name="app_name">PetCard</string>
    <string name="hint_input_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="login_text_button">Login</string>
    <string name="app_tile">Pet Card</string>
    <string name="logo_image_description">imagem com um cachorro e um gato</string>
    <string name="text_not_have_account">Não possui conta?</string>
    <string name="text_signup">Cadastre-se</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_repeat_password">Repita a senha</string>
    <string name="text_button_signup">Cadastrar</string>
    <string name="error_user_signup">Ocorreu um erro ao criar usuário</string>
    <string name="title_activity_mains_page_app">MainsPageAppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout_menu_text">Sair</string>
    <string name="logout">Sair</string>
    <string name="floating_button_description">button with plus in middle</string>
    <string name="hint_text_pet_name">Nome do pet</string>
    <string name="hint_pet_race">Raça</string>
    <string name="button_text_registrar">Registrar</string>
    <string name="error_empty_field">Campo não pode estar vazio</string>
    <string name="error_pet_register">Houve um erro ao adicionar o seu pet 😢</string>
    <string name="hint_animal_type">Tipo de Animal</string>
    <string name="animal_type_error_selection">Precisa escolher uma opção</string>
    <string name="description_image_pet_type">Image of Pet type</string>
    <string name="text_first_vaccine">First Vaccine Date:</string>
    <string name="text_next_vaccine">Next Vaccine Date:</string>

    <string-array name="pet_type">
        <item>😺</item>
        <item>🐶</item>
    </string-array>
</resources>