<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:padding="16dp"
    tools:context=".views.RegisterPet">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pet_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@drawable/shape_input"
        android:hint="@string/hint_text_pet_name"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_input"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pet_race"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_input"
        android:hint="@string/hint_pet_race"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_pet_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_pet_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_input"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_input"
        android:hint="@string/hint_animal_type"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/layout_pet_race">

        <AutoCompleteTextView
            android:id="@+id/text_field_item_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_input"
            android:inputType="none"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_register_pet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_button"
        android:text="@string/button_text_registrar"
        app:backgroundTint="@color/button_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>